--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 
   {% include head.html %}
 
@@ -19,5 +19,6 @@
         {% include footer.html %}
 
       </div>
+      <script id="dsq-count-scr" src="//{{ site.disqus }}.disqus.com/count.js" async></script>
     </body>
 </html>
