--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-    {% include analytics.html %}
+    <!-- {% include analytics.html %} -->
 
     <link rel="shortcut icon" href="{{ site.baseurl }}images/favicon.jpg">
 
