--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
   <div class="col-lg-8 col-lg-offset-2">
     <div class="menu">
       <ul>
-          <li><a href="{{ site.baseurl }}">home</a></li>
+          <li><a href="{{ site.baseurl }}/">home</a></li>
           <li><a href="{{ site.baseurl }}/blog">blog</a></li>
       </ul>
     </div>
