--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ comments: true
         {% if page.author %} • {{ page.author }}{% endif %}
         {% if page.meta %} • {{ page.meta }}{% endif %}
         •
-        {% for category in page.tags %}<span><a href="{{ site.baseurl }}category/#{{ category }}" class="reserved">{{ category }}</a>{% if forloop.last != true %},{% endif %}</span>{% endfor %}
+        {% for category in page.tags %}<span><a href="{{ site.baseurl }}/category/#{{ category }}" class="reserved">{{ category }}</a>{% if forloop.last != true %},{% endif %}</span>{% endfor %}
         •
         <a href="{{ content.absolute_url }}#disqus_thread">Post a comment</a>
       </p>
