add post and some tweak

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,7 +3,8 @@
     <div class="menu">
       <ul>
           <li><a href="{{ site.baseurl }}/">home</a></li>
-          <li><a href="{{ site.baseurl }}/blog">blog</a></li>
+          <li><a href="{{ site.baseurl }}/ctf">ctf</a></li>
+          <li><a href="{{ site.baseurl }}/research">research</a></li>
       </ul>
     </div>
   </div>
