--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,6 @@
         {% include footer.html %}
 
       </div>
-      <script id="dsq-count-scr" src="//{{ site.disqus }}.disqus.com/count.js" async></script>
+      <script id="dsq-count-scr" src="//{{ site.disqus.shortname }}.disqus.com/count.js" async></script>
     </body>
 </html>
