--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,8 @@ layout: page
       </p>
   </header>
 
+  <h1>{{ page.title }}</h1>
+
   <article class="post-content">
   {{ content }}
   </article>
