--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,6 +5,7 @@
           <li><a href="{{ site.baseurl }}/">home</a></li>
           <li><a href="{{ site.baseurl }}/ctf">ctf</a></li>
           <li><a href="{{ site.baseurl }}/research">research</a></li>
+          <li><a href="{{ site.baseurl }}/other">other</a></li>
       </ul>
     </div>
   </div>
