--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,6 +4,7 @@
       <ul>
           <li><a href="{{ site.baseurl }}/">home</a></li>
           <li><a href="{{ site.baseurl }}/ctf">ctf</a></li>
+          <li><a href="{{ site.baseurl }}/htb">htb</a></li>
           <li><a href="{{ site.baseurl }}/research">research</a></li>
           <li><a href="{{ site.baseurl }}/other">other</a></li>
       </ul>
